this is 2nd commit

--- a/Count Elements With Maximum Frequency.ipynb
+++ b/Count Elements With Maximum Frequency.ipynb
@@ -2,39 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "5914a4be",
+   "execution_count": 43,
+   "id": "f3648af1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Count Elements With Maximum Frequency\n",
+    "\n",
     "def frequency(a):\n",
     "    \n",
     "    count=0\n",
-    "    for i in range(len(a)):\n",
+    "    inde=[]\n",
+    "    for i in range(1,888888):\n",
+    "        inde.append(i)\n",
+    "    for i in inde:\n",
     "        if i in a:\n",
     "            if i==a:\n",
-    "            count+=0\n",
-    "        else:\n",
-    "            count+=1\n",
-    "print(count)"
+    "                count+=0\n",
+    "            else:\n",
+    "                count+=1\n",
+    "    return count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3be8abfc",
+   "execution_count": 41,
+   "id": "404f50fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "a=[1,2,9,1,1,3,4,5,6,7,8,8,9,10"
+    "a=[1,2,9,1,1,3,4,5,6,7,8,8,9,10,578]\n",
+    "frequency(a)"
    ]
   }
  ],
